# sie-ai

./: .env.example  .gitignore  README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/sie/: __init__.py  __main__.py  app.py  cli.py  episode.py  flow.py  humor.py  llm.py  personality.py  session.py  styles.py
src/sie/email/: __init__.py  auth_setup.py  gmail.py
src/sie/enneagram/: __init__.py  assess.py  body_anger_questions.py  center_core_questions.py  center_crosscheck.py  center_tiebreak_questions.py  confidence.py  context.py  inputs.py  profile.py  questions.py  rationale.py  report.py  saint_exupery_characters.py  scoring.py  type_core_questions.py  type_tiebreak_questions.py  types.py  ui.py  wing_questions.py  wing_templates.py
tests/: test_body_anger.py  test_center_core_questions.py  test_center_crosscheck.py  test_center_supplemental.py  test_center_tiebreak.py  test_confidence_display.py  test_enneagram.py  test_enneagram_context.py  test_enneagram_rationale.py  test_enneagram_report.py  test_episode.py  test_flow.py  test_gmail.py  test_saint_exupery_characters.py  test_type_confidence.py  test_type_core_questions.py  test_type_reconfirm.py  test_type_refine.py  test_type_tiebreak.py  test_wing_questions.py  test_wing_templates.py
