[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sie-ai"
version = "0.1.0"
description = "S.I.E. (サイ) personality AI — Support Intelligence on Ego"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
web = [
    "streamlit>=1.30.0",
]

[project.scripts]
sie = "sie.cli:main"
sie-web = "sie.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
